Fix: incidents view on mobile / tablet devices

--- a/resources/css/incidents/list.scss
+++ b/resources/css/incidents/list.scss
@@ -14,5 +14,5 @@
 }
 
 .filter-incidents {
-	width:940px;
+	max-width:900px;
 }
